# aiven-shadowtraffic-demo

./: .dockerignore  .gitignore  Dockerfile  README.md  compose.yaml  demo-notebook.sh  jupyter.sh  license.env.example  pyproject.toml  wire-demo.ipynb
.jupyter/kernels/bash/: kernel.json
backend/: package-lock.json  package.json
backend/src/: server.js
backend/src/config/: configManager.js  kafkaConnection.js
backend/src/db/: metricsPoller.js  pgClient.js
backend/src/domains/: github.js  index.js
backend/src/lifecycle/: aivenClient.js  watchdog.js
backend/src/routes/: control.js  osdProxy.js  status.js
backend/test/: aivenClient.test.js  configManager-write.test.js  configManager.test.js  control-routes.test.js  domains-index.test.js  github.test.js  kafkaConnection.test.js  metricsPoller.test.js  osdProxy.test.js  pgClient.test.js  server.test.js  status-routes.test.js  watchdog.test.js
deploy/: README-osd-dashboard.md  jdbc-sink-connector.json  opensearch-index-template.json  opensearch-sink-connector.json  osd-dashboard-objects.ndjson  osd-saved-objects.ndjson  postgres-schema.sql  wire-demo.ipynb
docker/: Dockerfile  entrypoint-shadowtraffic.sh  entrypoint.sh  supervisord.conf
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  api.js
frontend/src/components/: BreakdownChart.jsx  ControlPanel.jsx  CountdownTimer.jsx  Dashboard.jsx  HeroChart.jsx  KpiTile.jsx
scripts/: encode-license.sh  provision-aiven.md
